SCRUM-145
Creacion de nuevo endpoint para Safekeeper que proyecte los datos de los custodios.
